--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "sort-by": "^1.2.0",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
